# src/routes.ts
@@ -2,6 +2,7 @@ import { Router } from 'express';
 
 import { CreateUserController } from './controllers/user/CreateUserController';
 import { CreateAddressController } from './controllers/address/CreateAddressController';
+import { AuthUserController } from './controllers/user/AuthUserController';
 
 const router = Router();
 
@@ -11,5 +12,8 @@ router.post('/user', new CreateUserController().handle);
 
 // Rota para criar um novo endereço
 router.post('/address', new CreateAddressController().handle);
+
+// rota para fazer login
+router.post('/login', new AuthUserController().handle);
 
 export { router };
