# src/swagger.json
@@ -74,7 +74,7 @@
               "schema": {
                 "$ref": "#/components/schemas/Address"
               },
-              "examples":{
+              "examples": {
                 "address": {
                   "value": {
                     "street": "Rua Ingu, 1111",
@@ -90,20 +90,65 @@
             }
           }
         },
-        "responses":{
+        "responses": {
           "400": {
             "description": "Bad request"
           },
-          "500":{
-            "description":"Server internal error"
+          "500": {
+            "description": "Server internal error"
           },
           "200": {
             "description": "Ok",
             "content": {
               "application/json": {
                 "schema": {
-                  "type":"object",
+                  "type": "object",
                   "$ref": "#/components/schemas/Address"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/login": {
+      "post": {
+        "summary": "Login de usuário",
+        "description": "Rota responsável por realizar o login do usuário",
+        "tags": [
+          "Users"
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#components/schemas/User_Login"
+              },
+              "examples": {
+                "user": {
+                  "value": {
+                    "email": "ewertonb@live.com",
+                    "password": "102030"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses":{
+          "400": {
+            "description": "Bad request"
+          },
+          "500": {
+            "description": "Server internal error"
+          },
+          "200":{
+            "description": "Ok",
+            "content": {
+              "application/json":{
+                "schema": {
+                  "type":"object",
+                  "$ref": "#components/schemas/User_Login"
                 }
               }
             }
@@ -120,6 +165,17 @@
           "name": {
             "type": "string"
           },
+          "email": {
+            "type": "string"
+          },
+          "password": {
+            "type": "string"
+          }
+        }
+      },
+      "User_Login": {
+        "type": "object",
+        "properties": {
           "email": {
             "type": "string"
           },
